--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
     
     <main>
         <h3 id="gametitle">Snake</h3>
-        <div id="game"></div>
-        <div id="settings"></div>
+        <div id="game">
+            <table id='board'>
+            </table>
+        </div>
+        <div id="settings">
+            <button id='start'>Start Game</button>
+
+        </div>
     </main>
 
     <footer>
