--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,12 +21,13 @@
         </div>
         <div id="settings">
             <button id='start'>Start Game</button>
+            <button id='stop'>Stop Game</button>
 
         </div>
     </main>
 
     <footer>
-        <span>Create By Xavier Loera Flores</span>
+        <span>Created By Xavier Loera Flores</span>
     </footer>
 
     <script src="app.js"></script>
