Finished base user stories

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     
     <main>
-        <h3 id="gametitle">Snake</h3>
+        <h2 id="gametitle">Snake</h2>
         <div id="game">
             <table id='board'>
             </table>
@@ -22,7 +22,7 @@
         <div id="settings">
             <button id='start'>Start Game</button>
             <button id='stop'>Stop Game</button>
-
+            <span id='scoreLabel'>Score: <span id='score'></span></span>
         </div>
     </main>
 
