Score->snake Length

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="settings">
             <button id='start'>Start Game</button>
             <button id='stop'>Stop Game</button>
-            <span id='scoreLabel'>Score: <span id='score'></span></span>
+            <span id='scoreLabel'>Snake Length: <span id='score'></span></span>
         </div>
     </main>
 
